RW-803 correct attribute text in selection list

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -20,7 +20,9 @@
     <div class="count-preview">
       <button type="button"
           class="btn"
-          (click)="requestPreview(attrs)">
+          (click)="requestPreview(attrs)"
+          [disabled]="!attrs.valid"
+      >
         Calculate
       </button>
       Number Participants:
