--- a/ui/src/app/views/notebook-redirect/component.html
+++ b/ui/src/app/views/notebook-redirect/component.html
@@ -3,13 +3,23 @@
 <div [ngSwitch]="progress" class="spinner-container">
   <span class="spinner spinner-lg"></span>
   <p *ngSwitchCase="Progress.Initializing" class="spinner-text">
-    <span class="spinner-header">Initializing Notebook Server</span><br>
+    <span class="spinner-header">Initializing notebook server</span><br>
     May take up to 5 minutes
   </p>
-  <p *ngSwitchCase="Progress.Configuring" class="spinner-text">
-    Configuring Notebook Server
+  <p *ngSwitchCase="Progress.Resuming" class="spinner-text">
+    <span class="spinner-header">Resuming notebook server</span><br>
+    May take up to 1 minute
+  </p>
+  <p *ngSwitchCase="Progress.Authenticating" class="spinner-text">
+    Authenticating with the notebook server
+  </p>
+  <p *ngSwitchCase="Progress.Copying" class="spinner-text">
+    Copying notebook onto the notebook server
+  </p>
+  <p *ngSwitchCase="Progress.Creating" class="spinner-text">
+    Creating the new notebook
   </p>
   <p *ngSwitchCase="Progress.Redirecting" class="spinner-text">
-    Redirecting to the Notebook Server
+    Redirecting to the notebook server
   </p>
 </div>
