did not answer added to surveys

--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -22,7 +22,7 @@
             <h5 class="box-title">
               Number Completed
             </h5>
-            <div class="card-stat">
+            <div class="card-stat" *ngIf="!loading">
               {{survey.countValue | number }}
             </div>
             <div class="card-text">
