--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -27,8 +27,9 @@
       </div>
     </div>
 
-    <h5 class="box-heading" *ngIf="!loading" > EHR Domains: </h5>
-    <div class="row" *ngIf="!loading" >
+
+    <h5 class="box-heading" style="display:block" *ngIf="showDataType(EHR_DATATYPE)" > EHR Domains: </h5>
+    <div class="row" *ngIf="showDataType(EHR_DATATYPE)" >
       <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12" *ngFor="let r of domainResults">
           <div class="white-card-box search-result">
             <h5 class="box-title">
@@ -51,8 +52,8 @@
 
     </div>
 
-    <h5 class="box-heading" *ngIf="!loading"> Surveys:  </h5>
-    <div class="row" *ngIf="!loading">
+    <h5 class="box-heading" *ngIf="showDataType(SURVEY_DATATYPE)"> Surveys:  </h5>
+    <div class="row" *ngIf="showDataType(SURVEY_DATATYPE)">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" *ngFor="let r of surveyResults">
         <div class="white-card-box search-result">
           <h5 class="box-title">
