--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -4,10 +4,12 @@
       *ngIf="selectable"
       type="button"
       class="btn btn-sm btn-link selection-button"
+      [class.pm]="node.get('type') === 'PM'"
       [disabled]="isSelected"
       (click)="select($event)">
     <clr-icon *ngIf="isSelected" shape="check-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="!isSelected" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isSelected && !node.get('attribute')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isSelected && node.get('attribute')" shape="cog" size="20" class="selection-icon"></clr-icon>
   </button>
 
   <!-- CODE -->
