--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -1,20 +1,16 @@
 <clr-button-group id="workspace-top-nav-bar" class="btn-group" [clrMenuPosition]="'bottom-right'">
   <clr-button class="btn btn-primary btn-top" [routerLink]="['/workspaces', wsNamespace, wsId]" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}">
-    Dashboard
+    About
   </clr-button>
-  <!--
-    This is to be added when we have cards for notebooks, because that will show just the most recent.
-    <button class="btn btn-primary btn-top">Notebooks</button>
-  -->
-  <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
-    <clr-button class="btn btn-primary btn-top" [class.awaiting-review]="awaitingReview" [disabled]="awaitingReview || !writePermission"
-            [routerLink]="['/workspaces', wsNamespace, wsId, 'cohorts', 'build']">
-      Cohort Builder
-    </clr-button>
-    <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
-  </span>
-
+  <clr-button class="btn btn-primary btn-top" [routerLink]="['/workspaces', wsNamespace, wsId, 'notebooks']" routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact: true}">
+    Notebooks
+  </clr-button>
+  <clr-button class="btn btn-primary btn-top" [routerLink]="['/workspaces', wsNamespace, wsId, 'cohorts']" routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact: true}">
+    Cohorts
+  </clr-button>
   <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-left">
     <clr-button [clrInMenu]="true" class="btn" [disabled]="!writePermission" [routerLink]="['/workspaces', wsNamespace, wsId, 'edit']"
             routerLinkActive="active">
