--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -1,7 +1,7 @@
 <clr-button-group id="workspace-top-nav-bar" class="btn-group" [clrMenuPosition]="'bottom-right'">
   <clr-button class="btn btn-primary btn-top" [routerLink]="['/workspaces', wsNamespace, wsId]" routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}">
-    Dashboard
+    About
   </clr-button>
   <!--
     This is to be added when we have cards for notebooks, because that will show just the most recent.
