answer graphs , percent , Download link

--- a/public-ui/src/app/views/db-home/db-home.component.html
+++ b/public-ui/src/app/views/db-home/db-home.component.html
@@ -33,7 +33,7 @@
           </p>
         </div>
         <div class="col-sm-3  col-xs-12 button-col">
-          <button class="btn btn-primary search" [routerLink]="['quick-search/surveys']">Search</button>
+          <button class="btn btn-primary search" [routerLink]="['quick-search/surveys']">Browse</button>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div class="col-sm-3 col-xs-12 button-col">
-          <button class="btn btn-primary search" [routerLink]="['quick-search/ehr']">Search</button>
+          <button class="btn btn-primary search" [routerLink]="['quick-search/ehr']">Browse</button>
         </div>
       </div>
     </div>
