--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -45,7 +45,7 @@
               <span *ngIf="!loading" >{{ surveyResult.items.length }} </span>
             </div>
             <div class="card-text">
-              questions on this survey
+              <a href="{{surveyPdfUrl}}"> Download Survey PDF <clr-icon shape="file" class="has-badge is-solid"></clr-icon></a>
             </div>
           </div>
         </div>
@@ -121,10 +121,18 @@
 
         <div class="row flex-items-xs-middle answers" [hidden]="!showAnswer[q.conceptId]">
           <div class="col-md-5 col-sm-5 col-xs-12 answer-list">
-            <div *ngFor="let a of q.countAnalysis.results"  >
-              <div class="answer-text" (click)="showAnswerGraphs(q, a)" [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
+            <div  class="row"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id" (click)="showAnswerGraphs(q, a)" *ngFor="let a of q.countAnalysis.results">
+              <div class="answer-text col-sm-6 col-xs-12" >
                 <label innerHtml="{{a.stratum4 | highlightSearch : searchText.value }}"> {{a.stratum4}} </label>
-                <label class="participant-count"> -- {{a.countValue | number}}  </label>
+              </div>
+              <div class="answer-text col-sm-2 col-xs-12"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
+                <label class="participant-count">{{a.countValue | number}}  </label>
+              </div>
+              <div class="col-sm-4 col-xs-12"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id">
+                <div class="progress labeled">
+                  <progress max="100" value="{{a.countPercent}}" data-displayval="0%"></progress>
+                  <span>{{a.countPercent}}%</span>
+                </div>
               </div>
             </div>
           </div>
