--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -102,7 +102,7 @@
 
           <div class="col-xs-12 col-sm-12">
             <div class="box-title"> Question {{i + 1}}</div>
-            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}} ({{q.conceptId}})">   </div>
+            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}})">   </div>
           </div>
 
           <!-- Don't show this chart <div class="col-md-6 col-xs-12 col-sm-6 answers-bar-col">
