--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -2,15 +2,15 @@
   <div class="main-body">
     <h2 style="height: 65px">{{greeting}}</h2>
     <div class="card-area">
-      <div class="create-card" style="height: 105px; width: 180px" (click)="newNotebook()">
+      <div class="card create-card" style="height: 125px; width: 195px" (click)="newNotebook()">
           <div class="create-card-text">Create a</div>
           <div class="create-card-text">New Cohort</div>
-          <div class="create-card-text" style="padding-top: 4px"><clr-icon shape="plus-circle" size="21"></clr-icon></div>
+          <div class="create-card-text" style="padding-top: 10px"><clr-icon shape="plus-circle" size="21"></clr-icon></div>
       </div>
-      <div class="create-card" style="height: 105px; width: 180px; margin-top: 13px;" (click)="buildCohort()">
+      <div class="card create-card" style="height: 125px; width: 195px; margin-top: 13px;" (click)="buildCohort()">
         <div class="create-card-text">Create a</div>
         <div class="create-card-text">New Notebook</div>
-        <div class="create-card-text" style="padding-top: 4px"><clr-icon shape="plus-circle" size="21"></clr-icon></div>
+        <div class="create-card-text" style="padding-top: 10px"><clr-icon shape="plus-circle" size="21"></clr-icon></div>
       </div>
     </div>
   </div>
