not sure how this did not get in

--- a/ui/src/app/styles/cards.css
+++ b/ui/src/app/styles/cards.css
@@ -8,7 +8,8 @@
   margin-top: 0rem;
 }
 
-.create-card {
+.card.create-card {
+  padding: 0px;
   border-radius: 5px;
   background-color: #FFFFFF;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 3px 2px 0 rgba(0,0,0,0.12);
