ehr view testing

--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -1,5 +1,6 @@
 
 
+<!-- old search box and title
 <div class="row flex-items-xs-middle">
   <div class="col-xs-12">
     <h2 class="title">  {{title}} </h2>
@@ -17,10 +18,13 @@
     </div>
   </div>
   <div class="col-md-4 col-sm-2 col-xs-1" *ngIf="loading" >
-    <span  class="spinner spinner-lg hidden-sm-down">Loading ...</span>
-    <span  class="spinner spinner-md hidden-md-up">Loading ...</span>
+    <span  class="spinner spinner-lg hidden-sm-down"></span>
+    <span  class="spinner spinner-md hidden-md-up hidden-xs-down"></span>
+    <span  class="spinner spinner-sm hidden-sm-up"></span>
+
   </div>
 </div>
+-->
 
 <div class="row flex-items-xs-middle">
   <div class="col-xs-12">
@@ -38,7 +42,8 @@
 
   <div class="col-md-4 col-sm-2 col-xs-1 flex-xs-middle" *ngIf="loading" >
     <span  class="spinner spinner-lg hidden-sm-down">Loading ...</span>
-    <span  class="spinner spinner-md hidden-md-up">Loading ...</span>
+    <span  class="spinner spinner-md hidden-md-up hidden-xs-down"></span>
+    <span  class="spinner spinner-sm hidden-sm-up"></span>
   </div>
 </div>
 
