--- a/ui/src/app/views/notebook-list/component.css
+++ b/ui/src/app/views/notebook-list/component.css
@@ -14,40 +14,13 @@
   justify-content: center;
 }
 
-.card .plus-circle {
-  width: 21px;
-  height: 21px;
-  color: #216FB4;
-}
-
-.card {
-  width: 200px;
-  height: 223px;
-  margin-right: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  cursor: pointer;
-}
-
-.card.add-card {
-  height: 105px;
-}
-
-.card.add-card.disabled {
-  cursor: not-allowed;
+.card.notebook-card {
+  justify-content: space-between;
 }
 
 .card-area {
   display: flex;
   justify-content: flex-start;
-}
-
-.create-text {
-  color: #216FB4;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 22px;
 }
 
 .notebooks-header {
@@ -56,9 +29,4 @@
   line-height: 24px;
 }
 
-.notebook-name {
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 22px;
-  color: #216FB4;
-}
+
