--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -11,12 +11,13 @@
     <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create notebooks</span>
   </div>
 
-  <div class="card" *ngFor="let notebook of notebookList" (click)="openNotebook(notebook)">
-    <div class="notebook-name">{{notebook.name}}</div>
-    <div class="notebook-description">Temp</div>
+  <div class="card item-card notebook-card" *ngFor="let notebook of notebookList" (click)="openNotebook(notebook)">
+    <div class="name">{{notebook.name}}</div>
     <div class="footer">
-      <div class="last-accessed">{{notebook.lastModifiedTime | date}}</div>
-      <div class="notebook-type"></div>
+      <div class="last-modified">
+        <div>Last Update<br/>{{notebook.lastModifiedTime | date}}</div>
+      </div>
+      <div class="item-type notebook"><div>NB</div></div>
     </div>
   </div>
 </div>
